Add links to hashtags

--- a/data/blog/nostr-design-highlights.mdx
+++ b/data/blog/nostr-design-highlights.mdx
@@ -60,8 +60,8 @@ Zap.stream now features a new dashboard and a new onboarding flow.
 
 ![TopZaps](/static/images/blog/topzaps.png)
 
-In an effort to make Value for Value content publishing work, Niel Liesmons came
-up with **Top Zaps**. It’s an intuitive way to show individual zappers in a
+In an effort to make [#value4value][v4v] content publishing work, Niel Liesmons
+came up with **Top Zaps**. It’s an intuitive way to show individual zappers in a
 social feed (from high to low) and incentivize users to compete for the top
 spot. Predictably, [Nostrudel](https://nostrudel.ninja/) was the first app to
 implement this. Both Highlighter and [Primal](https://primal.net/) quickly
@@ -81,11 +81,11 @@ The newly redesigned zap.cooking web app
 
 ![Satcom](/static/images/blog/satcom.png)
 
-Jingles reached out with the #nostrdesign hashtag for some design assistance on
-his [satcom.app](https://satcom.app/), a browser extension that lets you comment
-on any page you happen to be visiting. The landing page of the complete rebrand
-already went live and UI designs were provided to make the app more intuitive
-and make it fit in with the browser's design language.
+Jingles reached out with the [#nostrdesign][nd] hashtag for some design
+assistance on his [satcom.app](https://satcom.app/), a browser extension that
+lets you comment on any page you happen to be visiting. The landing page of the
+complete rebrand already went live and UI designs were provided to make the app
+more intuitive and make it fit in with the browser's design language.
 
 ![Mostr](/static/images/blog/mostr.png)
 
@@ -127,6 +127,8 @@ engaging way why Nostr is important.
 OpenSats is proud to support developers and designers who contribute to
 open-source projects in the nostr and bitcoin space. This means your open-source
 project or shipped product can take advantage of this initiative. To get
-assistance, email design@opensats.org or tag
-[#nostrdesign](https://nostr.band/?q=%23nostrdesign) in any of the social
-clients with a few details about your project.
+assistance, email design@opensats.org or tag [#nostrdesign][nd] in any of the
+social clients with a few details about your project.
+
+[v4v]: https://nostr.band/?q=%23value4value
+[nd]: https://nostr.band/?q=%23nostrdesign
