--- a/data/blog/nostr-design-highlights.mdx
+++ b/data/blog/nostr-design-highlights.mdx
@@ -19,6 +19,8 @@ The [pixel-obsessed ostriches](/nostr#nostr-design) have been busy, gently
 whipping the protocol into a presentable shape. Here are the highlights *\*hehe\**
 of some of the tools as a result:
 
+---
+
 ![Highlighter](/static/images/blog/highlighter.png)
 
 [highlighter.com](https://highlighter.com/) - the creator’s toolbox. Niel
@@ -27,6 +29,8 @@ and true UX patterns to create a visually stunning platform for creators.
 Highlighter allows for content publishing and subscription management all in one
 place. It’s one of the most ambitious projects on Nostr and everyone is excited
 to see how it turns out.
+
+---
 
 ![Nests](/static/images/blog/nests.png)
 
@@ -41,11 +45,17 @@ nests allow anyone to exchange value and thank speakers for their time.
 Nostr Nests was recently enhanced with wallet connect functionality and balance
 previews in the action bar UI.
 
+--- 
+
+![Mutiny](/static/images/blog/mutiny.png)
+
 Inspired by a talk Niel gave at the first Sovereign Engineering Cohort, the
 [Mutiny Wallet](https://www.mutinywallet.com/) team decided to start leveraging
 the benefits of a Chat UI in their app and go full throttle on making it a true
 People’s wallet. A bunch of UI suggestions have already received their warm
 welcome in their latest update.
+
+---
 
 ![Zap.stream](/static/images/blog/zapstream.png)
 
@@ -58,6 +68,8 @@ Gone are the days of minimal subscriber counts to start earning.
 
 Zap.stream now features a new dashboard and a new onboarding flow.
 
+---
+
 ![TopZaps](/static/images/blog/topzaps.png)
 
 In an effort to make [#value4value][v4v] content publishing work, Niel Liesmons
@@ -67,6 +79,8 @@ spot. Predictably, [Nostrudel](https://nostrudel.ninja/) was the first app to
 implement this. Both Highlighter and [Primal](https://primal.net/) quickly
 followed suit and chose to even give the message of the top zap special
 attention. We’re curious how this will play out over time.
+
+---
 
 ![Zap.cooking](/static/images/blog/zapcooking.png)
 
@@ -79,6 +93,8 @@ recipe websites filled with SEO-optimized stories and advertisements.
 
 The newly redesigned zap.cooking web app
 
+---
+
 ![Satcom](/static/images/blog/satcom.png)
 
 Jingles reached out with the [#nostrdesign][nd] hashtag for some design
@@ -87,11 +103,15 @@ lets you comment on any page you happen to be visiting. The landing page of the
 complete rebrand already went live and UI designs were provided to make the app
 more intuitive and make it fit in with the browser's design language.
 
+---
+
 ![Mostr](/static/images/blog/mostr.png)
 
 [Mostr.pub](https://mostr.pub/) - the fediverse-to-nostr bridge was also
 refreshed with a somewhat minor but future-looking UI that can accommodate
 further development.
+
+---
 
 ![Coracle](/static/images/blog/coracle-New.png)
 
@@ -113,6 +133,8 @@ impostors, and objectionable content.
 More new features are in the works involving custom feeds and search, stay
 tuned!
 
+---
+
 ![Njump](/static/images/blog/njump-update.png)
 
 [njump.me](https://njump.me/), Nostr's static HTTP gateway, allows you to browse
@@ -121,6 +143,8 @@ resource, especially messaging or social systems, and then open it with your
 preferred client. For this reason, Daniele decided to completely overhaul the
 homepage and make it an introductory resource that can explain in a quick and
 engaging way why Nostr is important.
+
+---
 
 ### Get design assistance for your nostr or bitcoin project
 
