Fix typo in summary

--- a/data/blog/nostr-design-highlights.mdx
+++ b/data/blog/nostr-design-highlights.mdx
@@ -12,7 +12,7 @@ authors:
   - niel
 images:
   - /static/images/blog/33-nostrdesign.jpg
-summary: A brief update on what the Nostr Designers have been up too
+summary: A brief update on what the Nostr Designers have been up to.
 ---
 
 The [pixel-obsessed ostriches](/nostr#nostr-design) have been busy, gently
