add <hr> and mutiny img (#271)

--- a/data/blog/nostr-design-highlights.mdx
+++ b/data/blog/nostr-design-highlights.mdx
@@ -19,6 +19,8 @@ The [pixel-obsessed ostriches](/nostr#nostr-design) have been busy, gently
 whipping the protocol into a presentable shape. Here are the highlights *\*hehe\**
 of some of the tools as a result:
 
+---
+
 ![Highlighter](/static/images/blog/highlighter.png)
 
 [highlighter.com](https://highlighter.com/) - the creator’s toolbox. Niel
@@ -42,6 +44,10 @@ nests allow anyone to exchange value and thank speakers for their time.
 
 Nostr Nests was recently enhanced with wallet connect functionality and balance
 previews in the action bar UI.
+
+--- 
+
+![Mutiny](/static/images/blog/mutiny.png)
 
 Inspired by a talk Niel gave at the first Sovereign Engineering Cohort, the
 [Mutiny Wallet](https://www.mutinywallet.com/) team decided to start leveraging
@@ -84,6 +90,8 @@ share their favorite recipes. It’s far from its final form, the team is alread
 planning a v2 phase with some interesting developments to come. The team
 collaborated with Karnage to achieve a stress-free UX, a departure from modern
 recipe websites filled with SEO-optimized stories and advertisements.
+
+---
 
 ---
 
