Add titles, reverse images and texts, reorganize content

--- a/data/blog/nostr-design-highlights.mdx
+++ b/data/blog/nostr-design-highlights.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Highlights of #nostrdesign"
-date: 2024-05-09
+date: 2024-05-10
 tags:
   - OpenSats
   - nostr
@@ -15,13 +15,11 @@ images:
 summary: A brief update on what the Nostr Designers have been up to.
 ---
 
-The [pixel-obsessed ostriches](/nostr#nostr-design) have been busy, gently
+The [pixel-obsessed nostriches](/nostr#nostr-design) have been busy, gently
 whipping the protocol into a presentable shape. Here are the highlights *\*hehe\**
 of some of the tools as a result:
 
----
-
-![Highlighter](/static/images/blog/highlighter.png)
+## Highlighter
 
 [highlighter.com](https://highlighter.com/) - the creator’s toolbox. Niel
 Liesmons applied first principles thinking while maintaining some of the tried
@@ -30,9 +28,11 @@ Highlighter allows for content publishing and subscription management all in one
 place. It’s one of the most ambitious projects on Nostr and everyone is excited
 to see how it turns out.
 
+![Highlighter](/static/images/blog/highlighter.png)
+
 ---
 
-![Nests](/static/images/blog/nests.png)
+## Nostr Nests
 
 [nostrnests.com](https://nostrnests.com/) is an effort led by Derek Ross,
 developed by Kieran and crafted from the ground up by Karnage. Nests has already
@@ -45,9 +45,11 @@ nests allow anyone to exchange value and thank speakers for their time.
 Nostr Nests was recently enhanced with wallet connect functionality and balance
 previews in the action bar UI.
 
+![Nests](/static/images/blog/nests.png)
+
 ---
 
-![Mutiny](/static/images/blog/mutiny.png)
+## Mutiny
 
 Inspired by a talk Niel gave at the first Sovereign Engineering Cohort, the
 [Mutiny Wallet](https://www.mutinywallet.com/) team decided to start leveraging
@@ -55,9 +57,75 @@ the benefits of a Chat UI in their app and go full throttle on making it a true
 People’s wallet. A bunch of UI suggestions have already received their warm
 welcome in their latest update.
 
+![Mutiny](/static/images/blog/mutiny.png)
+
 ---
 
-![Zap.stream](/static/images/blog/zapstream.png)
+## TopZaps
+
+In an effort to make [#value4value][v4v] content publishing work, Niel Liesmons
+came up with **Top Zaps**. It’s an intuitive way to show individual zappers in a
+social feed (from high to low) and incentivize users to compete for the top
+spot. Predictably, [Nostrudel](https://nostrudel.ninja/) was the first app to
+implement this. Both Highlighter and [Primal](https://primal.net/) quickly
+followed suit and chose to even give the message of the top zap special
+attention. We’re curious how this will play out over time.
+
+![TopZaps](/static/images/blog/topzaps.png)
+
+---
+
+## Zap.cooking
+
+[zap.cooking](https://zap.cooking/) underwent a rebrand from nostr.cooking. The
+platform now features a clean and intuitive design, making it easy for anyone to
+share their favorite recipes. It’s far from its final form, the team is already
+planning a v2 phase with some interesting developments to come. The team
+collaborated with Karnage to achieve a stress-free UX, a departure from modern
+recipe websites filled with SEO-optimized stories and advertisements.
+
+![Zap.cooking](/static/images/blog/zapcooking.png)
+
+---
+
+## Coracle.social
+
+[Coracle.social](https://coracle.social/) developed by Hodlbod, is taking on a
+new form in the wake of the design conceived by Daniele. Characterized by warm
+tones punctuated by the main color, an unusual orange in a purplish environment,
+the interface offers generous spaces with prominent navigation, in which user
+iteration is simple and pleasant, thus adapting to a wide range of user types,
+especially those less technical.
+
+![Coracle](/static/images/blog/coracle-New.png)
+
+Coracle introduced WoT (Web Of Trust), one of the best ways to determine a
+person's trustworthiness based on his or her social graph. Now that feature is
+emphasized with a new design derived from the circular sign of its logo that
+immediately shows the user's score at a glance. This helps reduce spam,
+impostors, and objectionable content.
+
+![WoT](/static/images/blog/coracle-WoT.png)
+
+More new features are in the works involving custom feeds and search, stay
+tuned!
+
+---
+
+## Njump
+
+[njump.me](https://njump.me/), Nostr's static HTTP gateway, allows you to browse
+profiles, notes and relays; it is now widely used by the community to preview a
+resource, especially messaging or social systems, and then open it with your
+preferred client. For this reason, Daniele decided to completely overhaul the
+homepage and make it an introductory resource that can explain in a quick and
+engaging way why Nostr is important.
+
+![Njump](/static/images/blog/njump-update.png)
+
+---
+
+## Zap.stream
 
 [Zap.stream](https://zap.stream/) is not the newest kid on the block but it is
 continuously undergoing development and refining the UI/UX. Just recently
@@ -68,32 +136,11 @@ Gone are the days of minimal subscriber counts to start earning.
 
 Zap.stream now features a new dashboard and a new onboarding flow.
 
----
-
-![TopZaps](/static/images/blog/topzaps.png)
-
-In an effort to make [#value4value][v4v] content publishing work, Niel Liesmons
-came up with **Top Zaps**. It’s an intuitive way to show individual zappers in a
-social feed (from high to low) and incentivize users to compete for the top
-spot. Predictably, [Nostrudel](https://nostrudel.ninja/) was the first app to
-implement this. Both Highlighter and [Primal](https://primal.net/) quickly
-followed suit and chose to even give the message of the top zap special
-attention. We’re curious how this will play out over time.
+![Zap.stream](/static/images/blog/zapstream.png)
 
 ---
 
-![Zap.cooking](/static/images/blog/zapcooking.png)
-
-[zap.cooking](https://zap.cooking/) underwent a rebrand from nostr.cooking. The
-platform now features a clean and intuitive design, making it easy for anyone to
-share their favorite recipes. It’s far from its final form, the team is already
-planning a v2 phase with some interesting developments to come. The team
-collaborated with Karnage to achieve a stress-free UX, a departure from modern
-recipe websites filled with SEO-optimized stories and advertisements.
-
----
-
-![Satcom](/static/images/blog/satcom.png)
+## Satcom
 
 Jingles reached out with the [#nostrdesign][nd] hashtag for some design
 assistance on his [satcom.app](https://satcom.app/), a browser extension that
@@ -101,46 +148,17 @@ lets you comment on any page you happen to be visiting. The landing page of the
 complete rebrand already went live and UI designs were provided to make the app
 more intuitive and make it fit in with the browser's design language.
 
+![Satcom](/static/images/blog/satcom.png)
+
 ---
 
-![Mostr](/static/images/blog/mostr.png)
+## Monstr.pub
 
 [Mostr.pub](https://mostr.pub/) - the fediverse-to-nostr bridge was also
 refreshed with a somewhat minor but future-looking UI that can accommodate
 further development.
 
----
-
-![Coracle](/static/images/blog/coracle-New.png)
-
-[Coracle.social](https://coracle.social/) developed by Hodlbod, is taking on a
-new form in the wake of the design conceived by Daniele. Characterized by warm
-tones punctuated by the main color, an unusual orange in a purplish environment,
-the interface offers generous spaces with prominent navigation, in which user
-iteration is simple and pleasant, thus adapting to a wide range of user types,
-especially those less technical.
-
-![WoT](/static/images/blog/coracle-WoT.png)
-
-Coracle introduced WoT (Web Of Trust), one of the best ways to determine a
-person's trustworthiness based on his or her social graph. Now that feature is
-emphasized with a new design derived from the circular sign of its logo that
-immediately shows the user's score at a glance. This helps reduce spam,
-impostors, and objectionable content.
-
-More new features are in the works involving custom feeds and search, stay
-tuned!
-
----
-
-![Njump](/static/images/blog/njump-update.png)
-
-[njump.me](https://njump.me/), Nostr's static HTTP gateway, allows you to browse
-profiles, notes and relays; it is now widely used by the community to preview a
-resource, especially messaging or social systems, and then open it with your
-preferred client. For this reason, Daniele decided to completely overhaul the
-homepage and make it an introductory resource that can explain in a quick and
-engaging way why Nostr is important.
+![Mostr](/static/images/blog/mostr.png)
 
 ---
 
