Add "open license" requirement to criteria

--- a/data/pages/apply.mdx
+++ b/data/pages/apply.mdx
@@ -40,7 +40,9 @@ and contributors which complement Bitcoin and help Bitcoin reach its
 fullest potential. Potential areas of interest include secure messaging,
 merchant acceptance tools, layer two protocols, etc. Source code and documents
 resulting from funded projects must be made publicly available for access, edit,
-and redistribution free of charge and without restrictions.
+and redistribution free of charge and without restrictions. Your project MUST
+HAVE a proper open-source license & educational materials must be available to
+the public under an open license.
 
 **Transparency & Education:** Funded contributors and projects should be prepared to
 share their experience and expertise with the greater community. We prefer
