Add donate button

--- a/data/blog/cashu-calle-receives-lts-grant.mdx
+++ b/data/blog/cashu-calle-receives-lts-grant.mdx
@@ -45,3 +45,7 @@ program](/blog/announcing-lts-grant-program-to-support-bitcoin-core-contributors
 is made possible by generous donors like you. To continue supporting
 contributors like Calle, please consider donating to the [General
 Fund](/funds/general).
+
+<center>
+    <DonateToGeneralFundButton/>
+</center>
