Use relative links

--- a/data/blog/jb55-receives-lts-grant.mdx
+++ b/data/blog/jb55-receives-lts-grant.mdx
@@ -34,11 +34,10 @@ Our mission at OpenSats is to provide sustainable funding for the builders and
 maintainers of critical open-source infrastructure within the Bitcoin and Nostr
 ecosystem.
 
-The [Long Term
-Support](https://opensats.org/blog/nostr-lts-long-term-support-for-nostr-developers)
+The [Long Term Support](/blog/nostr-lts-long-term-support-for-nostr-developers)
 program is made possible by generous donors like you. To continue supporting
 important contributors like Will Casarin, consider donating to [The Nostr
-Fund](https://opensats.org/funds/nostr).
+Fund](/funds/nostr).
 
 <center>
     <DonateToNostrFundButton/>
