--- a/data/blog/cashu-calle-receives-lts-grant.mdx
+++ b/data/blog/cashu-calle-receives-lts-grant.mdx
@@ -32,8 +32,10 @@ implementing a proof of liabilities scheme for auditing mints, and developing a
 "[multinut payments](https://github.com/cashubtc/nuts/pull/103)" concept to
 improve the utility of smaller Ecash balances.
 
-> Our mission with Cashu is to provide a robust, private, and efficient monetary
-> system that empowers users to transact with complete privacy and confidence.
+> Our mission with Cashu is to create a robust ecash protocol built for Bitcoin
+> with a focus on simplicity, efficiency, and privacy. Anyone should be able to
+> build open-source applications powered by ecash. And anyone should be able to
+> run them.
 >
 ><cite>–Calle</cite>
 
