Slight re-word based on feedback

--- a/data/blog/cashu-calle-receives-lts-grant.mdx
+++ b/data/blog/cashu-calle-receives-lts-grant.mdx
@@ -28,8 +28,8 @@ enhancing the functionality and user experience within the Bitcoin ecosystem.
 This LTS grant will support Calle's efforts to further enhance the robustness
 and performance of the Cashu protocol. Some of his key initiatives will include
 the introduction of a fee structure to prevent denial of service attacks,
-implementing a proof of liabilities scheme for auditing mints, and developing a
-"[multinut payments](https://github.com/cashubtc/nuts/pull/103)" concept to
+implementing a proof of liabilities scheme for auditing mints, and building upon
+the "[multinut payments](https://github.com/cashubtc/nuts/pull/103)" concept to
 improve the utility of smaller Ecash balances.
 
 > Our mission with Cashu is to create a robust ecash protocol built for Bitcoin
