Add GitHub link

--- a/data/blog/cashu-calle-receives-lts-grant.mdx
+++ b/data/blog/cashu-calle-receives-lts-grant.mdx
@@ -8,8 +8,8 @@ images: ['/static/images/blog/34-calle.jpg']
 summary: "OpenSats Welcomes Calle as an LTS Grantee."
 ---
 
-OpenSats is thrilled to announce additional long-term support for our latest
-grantee, Calle.
+OpenSats is thrilled to announce long-term support for our latest grantee,
+[Calle](https://github.com/callebtc).
 
 Calle is recognized for his ongoing work with [Cashu](https://cashu.space/), a
 free and open-source Chaumian Ecash protocol that greatly improves user
