--- a/data/blog/jb55-receives-lts-grant.mdx
+++ b/data/blog/jb55-receives-lts-grant.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Long-Term Support For jb55"
+title: "Long-Term Support For William Casarin"
 date: '2024-06-22'
 tags: ['OpenSats', 'grants', 'nostr', 'LTS']
 draft: false
