--- a/data/blog/nostr-grants-december-2023.mdx
+++ b/data/blog/nostr-grants-december-2023.mdx
@@ -92,7 +92,7 @@ License: GPL-3.0
 
 ### noStrudel
 
-[noStrudel](https://camelus.app/) is a fast and feature-rich web client that is
+[noStrudel](https://nostrudel.ninja/) is a fast and feature-rich web client that is
 focused on power users and developers. While it is not geared towards complete
 newcomers, it might help curious users learn more about how nostr works under
 the hood.
