Fix authors array

--- a/data/blog/announcing-the-opensats-education-initiative.mdx
+++ b/data/blog/announcing-the-opensats-education-initiative.mdx
@@ -3,7 +3,7 @@ title: "Announcing the OpenSats Education Initiative"
 date: '2024-06-27'
 tags: ['OpenSats', 'grants', 'bitcoin', 'education']
 draft: false
-authors: ['dread', 'dergigi']
+authors: ['dread']
 images: ['/static/images/blog/TODO.jpg']
 summary: "We are proud to announce the OpenSats Education Initiative, spearheaded by Dread."
 ---
