--- a/data/blog/announcing-the-opensats-education-initiative.mdx
+++ b/data/blog/announcing-the-opensats-education-initiative.mdx
@@ -36,9 +36,9 @@ to advanced technical developer education programs.
 ## Open Source and Open License
 
 A core principle of OpenSats is that all supported projects [must be
-open-source](/selection) and freely accessible. All educational materials funded
-through our grants must be published under a free and open license, making them
-available to everyone.
+open-source](/selection) and freely accessible. Consequently, all educational
+materials funded through our grants must be published under a free and open
+license, making them available to everyone.
 
 We believe that the power of education lies in its open accessibility, and this
 initiative is designed to break down paywalls and other financial barriers,
