--- a/data/blog/raj-receives-lts-grant.mdx
+++ b/data/blog/raj-receives-lts-grant.mdx
@@ -28,7 +28,7 @@ support to Raj to move this important project forward.
 Raj has a prolific pedigree contributing to BDK (supported by a Spiral Dev
 Grant), running the technical track at Bitcoin4India, and has been foundational
 in building a Bitcoin Developer education academy for India and Southeast Asia,
-[www.bitshala.org](http://www.bitshala.org/). Raj has been working on CoinSwap
+[bitshala.org](https://bitshala.org/). Raj has been working on CoinSwap
 as a Lead Dev and Project Manager since July 2023.
 
 This LTS grant will enable Raj to focus on several critical developments:
