--- a/data/blog/raj-receives-lts-grant.mdx
+++ b/data/blog/raj-receives-lts-grant.mdx
@@ -17,8 +17,8 @@ Belcher](https://gist.github.com/chris-belcher).
 CoinSwaps, also known as
 [utxo-teleport/teleport-transactions](https://github.com/utxo-teleport/teleport-transactions),
 use HTLCs to enable atomic swaps between UTXOs for two or more anonymous
-participants. Implemented Coinswaps would significantly increase base privacy
-levels in Bitcoin.
+participants. When implemented, CoinSwaps would significantly increase base
+privacy levels in Bitcoin.
 
 Our [LTS grants](/blog/announcing-lts-grant-program-to-support-bitcoin-core-contributors)
 are awarded to individuals or projects making significant contributions to the
@@ -41,9 +41,9 @@ Additionally, there is potential for future work to extend CoinSwap to enable
 cross-chain atomic swaps between Liquid and Bitcoin, further enhancing liquidity
 and privacy for users.
 
-> Coinswap will provide network-wide passive privacy to all users, and is
+> CoinSwaps will provide network-wide passive privacy to all users, and is
 > potentially the most important privacy project ongoing in the current Bitcoin
-> ecosystem
+> ecosystem.
 >
 > <cite>Raj</cite>
 
