Apply feedback from review

--- a/data/blog/announcing-the-opensats-education-initiative.mdx
+++ b/data/blog/announcing-the-opensats-education-initiative.mdx
@@ -14,12 +14,10 @@ outreach worldwide. As part of our commitment to fostering knowledge and
 understanding of Bitcoin, starting today we are accepting grant applications
 specifically focused on Bitcoin educational projects.
 
-We are also pleased to announce that [Dread](/about/dread), an OpenSats board
-member and freedom tech advocate, will be leading the education initiative. With
-a focus on discovering and funding Bitcoin-related educational projects
-worldwide, Dread's leadership and passion for education will ensure that our
-funding reaches the audiences that need educational opportunities the most. His
-efforts will foster a deeper understanding of Bitcoin across diverse audiences.
+The initiative will be led by [Dread](/about/dread), in cooperation with veteran
+Bitcoin educators that form our education sub-committee. We want to ensure that
+funding reaches the audiences that need Bitcoin education the most, fostering a
+deeper understanding of Bitcoin across diverse audiences.
 
 ## A Renewed Focus on Education
 
