Use relative links

--- a/data/blog/bitcoin-grants-july-2024.mdx
+++ b/data/blog/bitcoin-grants-july-2024.mdx
@@ -25,15 +25,15 @@ In alphabetical order, they are:
 - [Utreexo](#utreexo)
 - [Validating Lightning Signer](#validating-lightning-signer)
 
-These grants are sourced from our [General Fund](https://opensats.org/projects/general_fund), which is funded by generous donors like you. If you would like to support free and open-source projects that help Bitcoin flourish, consider donating to the fund:
+These grants are sourced from our [General Fund](/projects/general_fund), which is funded by generous donors like you. If you would like to support free and open-source projects that help Bitcoin flourish, consider donating to the fund:
 
 <center>
     <DonateToGeneralFundButton/>
 </center>
 
-We are incredibly grateful for all donations—large and small—and are happy to have received significant donations from [The Reynolds Foundation](https://opensats.org/blog/opensats-receives-one-million-from-reynolds-foundation) and [#startsmall](https://opensats.org/blog/opensats-receives-additional-funding-of-dollar21m-from-startsmall) recently, which helped enable these grants.
+We are incredibly grateful for all donations—large and small—and are happy to have received significant donations from [The Reynolds Foundation](/blog/opensats-receives-one-million-from-reynolds-foundation) and [#startsmall](/blog/opensats-receives-additional-funding-of-dollar21m-from-startsmall) recently, which helped enable these grants.
 
-Without further ado, let us take a closer look at the projects to understand what they are about and how they align with [our mission](https://opensats.org/mission):
+Without further ado, let us take a closer look at the projects to understand what they are about and how they align with [our mission](/mission):
 
 ### Core Lightning Bookkeeper Dashboard
 
@@ -139,4 +139,4 @@ Validating Lightning Signer (VLS) is an open-source project with the explicit go
 
 This grant supports the work for VLS focused on support for low-resource signers, tuning for embedded processors, fine-tuning for latency and memory use, and dockerization. Subsequent focus then moves to operation on hardened servers, and validated support for high volume lightning use, i.e. thousands of channels and millions of payments. Future work extends support to LND beyond the initial [Core Lightning](https://github.com/ElementsProject/lightning) and [LDK](https://github.com/lightningdevkit)  implementations,  and then to support for Splicing and multi-sig lightning key management.
 
-This 5th wave of grants to Bitcoin projects follows our earlier announcement in [February](https://opensats.org/blog/bitcoin-grants-feb-2024) this year, and last year's announcements in [December](https://opensats.org/blog/bitcoin-grants-december-2023), [August](https://opensats.org/blog/bitcoin-and-nostr-grants-august-2023), and [July](https://opensats.org/blog/bitcoin-grants-july-2023). For more details on the types of projects and people we support, we encourage you to have a look at our [grants and reports](https://opensats.org/transparency#grants--reports). If you are a developer working on a project that is aligned with our mission, don't hesitate to [apply for funding](https://opensats.org/apply).
+This 5th wave of grants to Bitcoin projects follows our earlier announcement in [February](/blog/bitcoin-grants-feb-2024) this year, and last year's announcements in [December](/blog/bitcoin-grants-december-2023), [August](/blog/bitcoin-and-nostr-grants-august-2023), and [July](/blog/bitcoin-grants-july-2023). For more details on the types of projects and people we support, we encourage you to have a look at our [grants and reports](/transparency#grants--reports). If you are a developer working on a project that is aligned with our mission, don't hesitate to [apply for funding](/apply).
