--- a/data/blog/bitcoin-grants-july-2024.mdx
+++ b/data/blog/bitcoin-grants-july-2024.mdx
@@ -81,9 +81,6 @@ CLN already captures.
 
 ### Cove
 
-- Repo: [https://github.com/bitcoinppl/cove](https://github.com/bitcoinppl/cove)
-- License: [MIT](https://github.com/bitcoinppl/cove?tab=MIT-1-ov-file#readme)
-
 Cove is a new single-sig mobile wallet optimized for use with hardware signing
 devices. Cove leverages BDK with the core of the app built in Rust and an
 interface built with SwiftUI (for iOS) and Jetpack Compose (for Android). The
@@ -100,10 +97,10 @@ drives for offline signing. In the future, Cove will support coin control,
 passphrase use, multiple accounts, decoy wallets, and connecting to your own
 node.
 
-### Fedimint On-Chain Gateway & RBF
+Repository: [bitcoinppl/cove](https://github.com/bitcoinppl/cove)  
+License: [MIT](https://github.com/bitcoinppl/cove?tab=MIT-1-ov-file#readme)
 
-- Repo: [https://github.com/fedimint/fedimint](https://github.com/fedimint/fedimint)
-- License: [MIT](https://github.com/fedimint/fedimint/blob/master/LICENSE)
+### Fedimint On-Chain Gateway & RBF
 
 [Fedimint](https://fedimint.org/) is an open-source federated Chaumian eCash
 mint project used by several eCash projects, including Cashu and Fedi. Chaumian
@@ -118,6 +115,9 @@ instant settlement and connectivity fabric between mints, but exiting directly
 to Bitcoin's base layer was always part of Fedimint’s design. Work on the
 on-chain gateway will focus on optimizing these base-layer transactions under
 load, using RBF and other techniques.
+
+Repository: [fedimint/fedimint](https://github.com/fedimint/fedimint)  
+License: [MIT](https://github.com/fedimint/fedimint/blob/master/LICENSE)
 
 ### Krux
 
