Fix link to LICENSE file (Cove)

--- a/data/blog/bitcoin-grants-july-2024.mdx
+++ b/data/blog/bitcoin-grants-july-2024.mdx
@@ -98,7 +98,7 @@ passphrase use, multiple accounts, decoy wallets, and connecting to your own
 node.
 
 Repository: [bitcoinppl/cove](https://github.com/bitcoinppl/cove)  
-License: [MIT](https://github.com/bitcoinppl/cove?tab=MIT-1-ov-file#readme)
+License: [MIT](https://github.com/bitcoinppl/cove/blob/master/LICENSE)
 
 ### Fedimint On-Chain Gateway & RBF
 
