--- a/data/blog/bitcoin-grants-july-2024.mdx
+++ b/data/blog/bitcoin-grants-july-2024.mdx
@@ -121,7 +121,7 @@ License: [MIT](https://github.com/fedimint/fedimint/blob/master/LICENSE)
 
 ### Krux
 
-- Repo: [https://github.com/selfcustody/krux](https://github.com/selfcustody/krux)
+- Repo: [selfcustody/krux](https://github.com/selfcustody/krux)
 - License: [MIT](https://github.com/selfcustody/krux?tab=License-1-ov-file#readme)*
 
 Krux is open-source firmware that enables anyone to build their own Bitcoin
@@ -137,9 +137,6 @@ features, and the ability to use the signing device for Nostr.
 
 ### Krux Installer
 
-- Repo: [https://github.com/selfcustody/krux-installer](https://github.com/selfcustody/krux-installer)
-- License: [MIT](https://github.com/selfcustody/krux-installer?tab=MIT-1-ov-file#readme)
-
 Whilst Krux is an open-source firmware that allows anyone to build their own
 signing device for Bitcoin transactions, `krux-installer` is the desktop
 application that allows anyone to install the Krux firmware in a safe, easy, and
@@ -153,10 +150,10 @@ This grant will enable the project to refactor and align the technology between
 footprint. Additionally, this grant will allow developers to focus on macOS
 deployment and implement a "Wipe the device" feature to enhance security.
 
-### Lightning Network Protocol Test Framework
+Repository: [selfcustody/krux-installer](https://github.com/selfcustody/krux-installer)  
+License: [MIT](https://github.com/selfcustody/krux-installer?tab=MIT-1-ov-file#readme)
 
-- Repo: [https://github.com/rustyrussell/lnprototest](https://github.com/rustyrussell/lnprototest)
-- License: [MIT](https://github.com/rustyrussell/lnprototest/blob/master/pyproject.toml)
+### Lightning Network Protocol Test Framework
 
 The Lightning Network protocol test framework provides a common and reusable
 framework for easier testing of proposed protocol changes. This framework allows
@@ -172,6 +169,9 @@ by each group working on the Lightning Network simpler, and can be used to build
 and expand a base set of tests that are shared. In this way, each group can
 contribute to a common  test pool for the protocol, including those who have
 implementation-specific features (such as Pool or AMP).
+
+Repository: [rustyrussell/lnprototest](https://github.com/rustyrussell/lnprototest)  
+License: [MIT](https://github.com/rustyrussell/lnprototest/blob/master/pyproject.toml)
 
 ### Macadamia
 
@@ -194,11 +194,6 @@ releases.
 
 ### Tor Support for BDK & Fedimint
 
-- BDK Repo: [https://github.com/bitcoindevkit](https://github.com/bitcoindevkit)
-- License: [MIT](https://github.com/bitcoindevkit/bdk/blob/master/LICENSE-MIT) license or [Apache](https://github.com/bitcoindevkit/bdk/blob/master/LICENSE-APACHE) license
-- Fedimint Repo: [https://github.com/fedimint](https://github.com/fedimint)
-- License: [MIT](https://github.com/fedimint/fedimint/blob/master/LICENSE) license
-
 The [Bitcoin Development Kit](https://bitcoindevkit.org/) (BDK) provides a
 library of Bitcoin wallet capabilities for developers to build cross-platform
 Bitcoin wallets without needing to worry about Bitcoin internals.
@@ -210,13 +205,16 @@ open-source protocol, such as [Fedi](https://www.fedi.xyz/).
 This grant effort will focus on delivering Tor support for Fedimint clients and
 adding new gateways and PayJoin support. For BDK, this grant effort is focused
 on Tor support for the
-`[rust-esplora-client](https://github.com/bitcoindevkit/rust-esplora-client)`,
+[`rust-esplora-client`](https://github.com/bitcoindevkit/rust-esplora-client),
 upgrading `rust-bitcoin`, and building support for pruned nodes.
 
 Both  Fedimint and BDK are increasingly being leveraged by other projects in the
 wider Bitcoin ecosystem, such as BitKey, Mutiny Wallet, and LDK. Consequently,
 it is important that these building blocks provide a strong level of privacy and
 security.
+
+Repositories: [bitcoindevkit/bdk](https://github.com/bitcoindevkit/bdk) & [fedimint/fedimint](https://github.com/fedimint)  
+Licenses: [MIT](https://github.com/bitcoindevkit/bdk/blob/master/LICENSE-MIT)/[Apache](https://github.com/bitcoindevkit/bdk/blob/master/LICENSE-APACHE) & [MIT](https://github.com/fedimint/fedimint/blob/master/LICENSE)
 
 ### Utreexo
 
