--- a/data/blog/bitcoin-grants-july-2024.mdx
+++ b/data/blog/bitcoin-grants-july-2024.mdx
@@ -53,9 +53,6 @@ what they are about and how they align with [our mission](/mission):
 
 ### Core Lightning Bookkeeper Dashboard
 
-- Repo: [https://github.com/ElementsProject/cln-application](https://github.com/ElementsProject/cln-application)
-- License: [MIT](https://github.com/ElementsProject/cln-application?tab=MIT-1-ov-file#readme)
-
 The _Core Lightning Bookkeeper Dashboard_ provides a Graphical User Interface to
 the Core Lightning (CLN) back-end. Core Lightning is one of the four major
 Lightning implementations alongside [Eclair](https://github.com/ACINQ/eclair),
@@ -78,6 +75,9 @@ bookkeeper:
 
 In combination, these features will improve accessibility to the underlying data
 CLN already captures.
+
+Repository: [ElementsProject/cln-application](https://github.com/ElementsProject/cln-application)  
+License: [MIT](https://github.com/ElementsProject/cln-application?tab=MIT-1-ov-file#readme)
 
 ### Cove
 
@@ -121,9 +121,6 @@ License: [MIT](https://github.com/fedimint/fedimint/blob/master/LICENSE)
 
 ### Krux
 
-- Repo: [selfcustody/krux](https://github.com/selfcustody/krux)
-- License: [MIT](https://github.com/selfcustody/krux?tab=License-1-ov-file#readme)*
-
 Krux is open-source firmware that enables anyone to build their own Bitcoin
 signing device via off-the-shelf parts. It runs on Kendryte K210 devices such as
 the Maix Amigo or the M5StickV (among others), converting them into air-gapped
@@ -134,6 +131,9 @@ This grant supports the effort to expand firmware functionality and the range of
 supported devices, including PCs and Android mobile devices. New features will
 include the introduction of Krux Apps to enable games, additional OpSec
 features, and the ability to use the signing device for Nostr.
+
+Repository: [selfcustody/krux](https://github.com/selfcustody/krux)  
+License: [MIT](https://github.com/selfcustody/krux?tab=License-1-ov-file#readme)*
 
 ### Krux Installer
 
@@ -175,9 +175,6 @@ License: [MIT](https://github.com/rustyrussell/lnprototest/blob/master/pyproject
 
 ### Macadamia
 
-- Repo: [https://github.com/zeugmaster/macadamia](https://github.com/zeugmaster/macadamia)
-- License: [MIT](https://github.com/zeugmaster/macadamia?tab=MIT-1-ov-file#readme)
-
 [Macadamia](https://macadamia.cash/) is a native iOS wallet written in Swift and
 SwiftUI for the [Cashu](https://cashu.space/) Chaumian eCash protocol. The
 wallet aims to make privacy-preserving eCash use simple, smooth, and stable.
@@ -191,6 +188,9 @@ latter into a stand-alone Swift library with support for mandatory
 Additional support for more complex Cashu capabilities and better support for
 mints—including multi-mint multi-path payments—is on the roadmap for future
 releases.
+
+Repository: [zeugmaster/macadamia](https://github.com/zeugmaster/macadamia)
+License: [MIT](https://github.com/zeugmaster/macadamia?tab=MIT-1-ov-file#readme)
 
 ### Tor Support for BDK & Fedimint
 
@@ -218,9 +218,6 @@ Licenses: [MIT](https://github.com/bitcoindevkit/bdk/blob/master/LICENSE-MIT)/[A
 
 ### Utreexo
 
-- Repo: [https://github.com/utreexo/utreexo](https://github.com/utreexo/utreexo)
-- License: [MIT](https://github.com/utreexo/utreexo?tab=MIT-1-ov-file#readme)
-
 Utreexo utilizes Merkle trees to provide an alternate structure for access to
 Bitcoin data, enabling compact state nodes, parallelization of the Initial Block
 Download (IBD), and thereby wider distribution of functional Bitcoin nodes. This
@@ -233,10 +230,10 @@ building the bridge node implementation within Bitcoin Core. Subsequent work on
 optimizing performance for IBD, increasing efficiency in the accumulator
 implementation, and improving library support are to follow.
 
-### Validating Lightning Signer
+Repository: [https://github.com/utreexo/utreexo](https://github.com/utreexo/utreexo)  
+License: [MIT](https://github.com/utreexo/utreexo?tab=MIT-1-ov-file#readme)
 
-- Repo: [https://gitlab.com/lightning-signer/validating-lightning-signer](https://gitlab.com/lightning-signer/validating-lightning-signer)
-- License: [Apache2](https://gitlab.com/lightning-signer/validating-lightning-signer/-/blob/main/LICENSE)
+### Validating Lightning Signer
 
 Validating Lightning Signer (VLS) is an open-source project with the explicit
 goal to improve the security of the Lightning Network, by separating "hot"
@@ -253,6 +250,9 @@ and millions of payments. Future work extends support to LND beyond the initial
 [Core Lightning](https://github.com/ElementsProject/lightning) and
 [LDK](https://github.com/lightningdevkit)  implementations,  and then to support
 for Splicing and multi-sig lightning key management.
+
+Repository: [lightning-signer/validating-lightning-signer](https://gitlab.com/lightning-signer/validating-lightning-signer)  
+License: [Apache2](https://gitlab.com/lightning-signer/validating-lightning-signer/-/blob/main/LICENSE)
 
 ---
 
