--- a/data/blog/bitcoin-grants-july-2024.mdx
+++ b/data/blog/bitcoin-grants-july-2024.mdx
@@ -77,7 +77,7 @@ In combination, these features will improve accessibility to the underlying data
 CLN already captures.
 
 Repository: [ElementsProject/cln-application](https://github.com/ElementsProject/cln-application)  
-License: [MIT](https://github.com/ElementsProject/cln-application?tab=MIT-1-ov-file#readme)
+License: [MIT](https://github.com/ElementsProject/cln-application/blob/main/LICENSE)
 
 ### Cove
 
@@ -133,7 +133,7 @@ include the introduction of Krux Apps to enable games, additional OpSec
 features, and the ability to use the signing device for Nostr.
 
 Repository: [selfcustody/krux](https://github.com/selfcustody/krux)  
-License: [MIT](https://github.com/selfcustody/krux?tab=License-1-ov-file#readme)*
+License: Apache2 & [MIT](https://github.com/selfcustody/krux/blob/main/LICENSE.md)
 
 ### Krux Installer
 
@@ -214,7 +214,7 @@ it is important that these building blocks provide a strong level of privacy and
 security.
 
 Repositories: [bitcoindevkit/bdk](https://github.com/bitcoindevkit/bdk) & [fedimint/fedimint](https://github.com/fedimint)  
-Licenses: [MIT](https://github.com/bitcoindevkit/bdk/blob/master/LICENSE-MIT)/[Apache](https://github.com/bitcoindevkit/bdk/blob/master/LICENSE-APACHE) & [MIT](https://github.com/fedimint/fedimint/blob/master/LICENSE)
+Licenses: [MIT](https://github.com/bitcoindevkit/bdk/blob/master/LICENSE-MIT)/[Apache2](https://github.com/bitcoindevkit/bdk/blob/master/LICENSE-APACHE) & [MIT](https://github.com/fedimint/fedimint/blob/master/LICENSE)
 
 ### Utreexo
 
