Link to LICENSE files directly

--- a/data/blog/bitcoin-grants-july-2024.mdx
+++ b/data/blog/bitcoin-grants-july-2024.mdx
@@ -151,7 +151,7 @@ footprint. Additionally, this grant will allow developers to focus on macOS
 deployment and implement a "Wipe the device" feature to enhance security.
 
 Repository: [selfcustody/krux-installer](https://github.com/selfcustody/krux-installer)  
-License: [MIT](https://github.com/selfcustody/krux-installer?tab=MIT-1-ov-file#readme)
+License: [MIT](https://github.com/selfcustody/krux-installer/blob/main/LICENSE)
 
 ### Lightning Network Protocol Test Framework
 
@@ -190,7 +190,7 @@ mints—including multi-mint multi-path payments—is on the roadmap for future
 releases.
 
 Repository: [zeugmaster/macadamia](https://github.com/zeugmaster/macadamia)
-License: [MIT](https://github.com/zeugmaster/macadamia?tab=MIT-1-ov-file#readme)
+License: [MIT](https://github.com/zeugmaster/macadamia/blob/main/LICENSE)
 
 ### Tor Support for BDK & Fedimint
 
@@ -231,7 +231,7 @@ optimizing performance for IBD, increasing efficiency in the accumulator
 implementation, and improving library support are to follow.
 
 Repository: [https://github.com/utreexo/utreexo](https://github.com/utreexo/utreexo)  
-License: [MIT](https://github.com/utreexo/utreexo?tab=MIT-1-ov-file#readme)
+License: [MIT](https://github.com/utreexo/utreexo/blob/master/LICENSE.md)
 
 ### Validating Lightning Signer
 
