Fix utreexo link text

--- a/data/blog/bitcoin-grants-july-2024.mdx
+++ b/data/blog/bitcoin-grants-july-2024.mdx
@@ -230,7 +230,7 @@ building the bridge node implementation within Bitcoin Core. Subsequent work on
 optimizing performance for IBD, increasing efficiency in the accumulator
 implementation, and improving library support are to follow.
 
-Repository: [https://github.com/utreexo/utreexo](https://github.com/utreexo/utreexo)  
+Repository: [utreexo/utreexo](https://github.com/utreexo/utreexo)  
 License: [MIT](https://github.com/utreexo/utreexo/blob/master/LICENSE.md)
 
 ### Validating Lightning Signer
